--- a/src/app/modals/baseball-chatroom/baseball-chatroom.page.scss
+++ b/src/app/modals/baseball-chatroom/baseball-chatroom.page.scss
@@ -160,44 +160,61 @@ ion-item {
 }
 
 .chat-wrapper {
-    display: flex;
-    flex-direction: column;
-    margin: 0.25em auto;
-    padding: 0.15em 0.25em;
-    border-radius: 10px;
-    width: 95%;
+    // display: flex;
+    // flex-direction: column;
+    // margin: 0.25em auto;
+    // padding: 0.15em 0.25em;
+    // border-radius: 10px;
+    // align-items: center;
+    // width: 100%;
 
-    ion-item {
-        width: 100%;
+    // .chat-bubble-user::part(native) {
+    //     width: 100%;
+    //     border-radius: 10px;
+    //     // background: #F9824B;
+    // }
+
+    .chat-bubble-otheruser, .chat-bubble-user {
+        border: 1px solid var(--ion-color-light);
+    }
+
+    ion-card {
         border-radius: 10px;
+        min-width: 90%;
+        max-width: 300px;
+        margin: 0.5em auto;
+        box-shadow: none !important;
     }
     
-    .chat-item-wrapper {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        padding: 1em -0.5em 1em 1em;
-    }
+    // .chat-item-wrapper {
+    //     display: flex;
+    //     flex-direction: column;
+    //     width: 100%;
+    //     margin: 0em 0.5em 0em 0em;
+    // }
 
     .top-chat {
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        margin: 0.5em 0em;
+        border-bottom: 1px solid var(--ion-color-light);
+        background: white;
 
         .top-chat-left, .top-chat-right {
             display: flex;
             flex-direction: row;
             align-items: center;
+            padding: 0.5em 1em;
 
             .time-posted {
                 font-weight: 400;
-                font-size: 0.75em;
+                font-size: 0.9em;
             }
 
             ion-note {
-                font-size: 0.85em;
+                font-size: 0.9em;
+                font-weight: 600;
             }
 
             ion-avatar {
@@ -208,10 +225,34 @@ ion-item {
     }
 
     .middle-chat {
-        margin: 0.25em -0.5em 1em 0em;
+        // margin: 0.25em 0em 1em 0em;
 
         ion-note {
+            font-size: 1em;
+            display: flex;
+            padding: 1em;
+            // font-size: 0.9em;
+            flex-wrap: wrap;
+            max-width: 100%;
+            margin: auto;
+        }
+    }
+
+    .bottom-chat {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0em 1em 1em 1em;
+
+        ion-label {
             font-size: 0.9em;
+        }
+
+        ion-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 0.9em
         }
     }
 }
@@ -246,15 +287,27 @@ ion-footer {
     ion-textarea {
         border-radius: 30px;
         background: var(--ion-color-light);
-        padding: 0.1em 1em;
-        margin: 0em 0.5em;
+        padding: 0.1em 0.1em 0.1em 1em;
+        margin: 0em 0em 0em 0.5em;
         font-size: 0.9em;
         color: var(--ion-color-dark);
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 85%;
+
+        ion-icon {
+            margin: 0em;
+            min-width: 15%;
+        }
+
+
     }
 }
 
 .empty-div {
-    height: 90px;
+    height: 120px;
     width: 100%;
     clear: both;
 }
