--- a/src/app/pages/timeline/timeline.page.html
+++ b/src/app/pages/timeline/timeline.page.html
@@ -1,11 +1,15 @@
 <ion-header class="ion-no-border" mode="md">
   <ion-toolbar color="light">
-      <ion-title text-left>
+      <div class="toolbar-wrapper">
+      <ion-title>
         Timeline
       </ion-title>
-      <ion-tab-button (click)="createPhotoModal()" class="button-div" slot="end">
-        <ion-icon src="../../../assets/streamline/interface-add-square.svg"></ion-icon>
-      </ion-tab-button>
+      <input hidden type="file" #filepicker (change)="fileSelected($event)" />
+      <ion-fab-button color="dark" (click)="addFile()">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+      </div>
+
   </ion-toolbar>
 </ion-header>
 
