--- a/src/app/pages/timeline/timeline.page.scss
+++ b/src/app/pages/timeline/timeline.page.scss
@@ -4,16 +4,6 @@ ion-header {
     background: var(--ion-color-light) !important;
 }
 
-.header-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0.5em 0em;
-    border: 1px solid var(--ion-color-light);
-}
-
 ion-title {
     font-family: 'Cormorant', cursive !important;
     font-weight: 400;
@@ -23,29 +13,21 @@ ion-title {
     letter-spacing: -1px;
 }
 
-.button-div {
+.toolbar-wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    align-items: center;
 
-    ion-icon {
-        padding: 0 0.25em;
+    ion-fab-button {
+        background-color: transparent !important;
+        --border-radius: 15px;
+    }
+
+    ion-fab-button::part(native) {
+        background-color: var(--ion-color-light);
+        box-shadow: none !important;
+        border-radius: 5px;
+        color: black;
     }
 }
 
-ion-tabs {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-}
-
-ion-tabs,
-ion-tab-bar,
-ion-tab-button, ion-header, ion-toolbar {
-    background: var(--ion-color-light)
-}
-
-ion-tab-bar {
-    display: flex;
-    justify-content: center;
-}
