--- a/src/app/modals/create-media-modal/create-media-modal.page.html
+++ b/src/app/modals/create-media-modal/create-media-modal.page.html
@@ -8,10 +8,10 @@
       </ion-toolbar>
     </ion-header>
     <img *ngIf="isImage" class="photo-taken" [src]="src">
-    <video *ngIf="browser === 'chrome' && !isImage" [src]="src" class="video-div" width="100%" height="100%" autoplay="autoplay" controls="true" preload="metadata" muted playsinline></video>
+    <!-- <video *ngIf="browser === 'chrome' && !isImage" [src]="src" class="video-div" width="100%" height="100%" autoplay="autoplay" controls="true" preload="metadata" muted playsinline></video>
     <video *ngIf="browser === 'safari' || browser === 'other' && !isImage" class="video-div" width="100%" height="100%" autoplay="autoplay" controls="true" preload="metadata" muted playsinline>
       <source [src]="src" type="video/mp4">
-    </video>
+    </video> -->
     <form [formGroup]="postImageForm" (ngSubmit)="closeModal(postImageForm.value)">
       <ion-grid>
         <ion-row>
