--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <amplify-authenticator variation="modal">
   <ng-template amplifySlot="header">
-    <h4 class="title">feta</h4>
+    <h4 class="title">Friedman Alexander</h4>
   </ng-template>
   <ng-template amplifySlot="authenticated" let-user="user" let-signOut="signOut">
   </ng-template>
