--- a/src/app/modals/update-profile-modal/update-profile-modal.page.html
+++ b/src/app/modals/update-profile-modal/update-profile-modal.page.html
@@ -99,13 +99,13 @@
           <ion-select-option value="Nephew of Katie">Nephew of Katie</ion-select-option>
           <ion-select-option value="Nephew of Zach">Nephew of Zach</ion-select-option>
           <ion-select-option value="Friend">Friend</ion-select-option>
-          <ion-select-option value="Feta Creator">Feta Creator</ion-select-option>
+          <ion-select-option value="App Creator">App Creator</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item class="bio-item" counter="true" >
         <div class="text-area-wrapper">
         <ion-label class="name-input" position="stacked">Bio</ion-label>
-          <ion-textarea autoGrow="true" placeholder="Tell us about yourself..." class="bio-input" maxlength="120" formControlName="bio"></ion-textarea>
+          <ion-textarea autoGrow="true" placeholder="Tell us about yourself..." class="bio-input" maxlength="150" formControlName="bio"></ion-textarea>
         </div>
       </ion-item>
     </form>
